--- a/Obfuscation_AppServiceWithMSDeploy.json
+++ b/Obfuscation_AppServiceWithMSDeploy.json
@@ -122,7 +122,7 @@
               "displayName": "ObfuscationFunctionAppPackage"
             },
             "properties": {
-              "packageUri": "https://github.com/GowthamChalla/AzureFunctions/raw/master/FunctionApp2",
+              "packageUri": "https://github.com/GowthamChalla/AzureFunctions/raw/master/FunctionApp2.zip",
               "dbType": "None",
               "connectionString": "",
               "setParameters": {
